<resources>
    <string name="app_name">Trackingo</string>
    <string name="main_header">Trackingo</string>
    <string name="bus_op_name">New Morning Star Travels</string>
    <string name="tag">Trackingo for Your Safety &amp; Comfort</string>
    <string name="option1">Boarding Directions</string>
    <string name="option3">Share DropOff</string>
    <string name="option2_text1">Panic</string>
    <string name="option2_text2">In the case of emergency press this button.</string>
    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="time">Time</string>
    <string name="bus_number">Bus Number</string>
    <string name="location">Location</string>
    <string name="service_name_eg">KA-7A</string>
    <string name="service">Service:</string>
    <string name="feedback_text">We Love to hear any feedback you have about <b>Trackingo</b>.\n\nIf you have any feedback/complaint about <b>Bus Operator.</b> submit it here</string>
    <string name="download_app_text">For Booking, Tracking, Break Stops &amp; Alerts with Exclusive Offers</string>
    <string name="disclaimer_text"><b><u>Disclaimer</u></b> : TrackingGo provides information about the location,
        arrival or delay of the bus to its passengers.\n\nThese services are merely for knowledge purposes and not for authentic timings.
        So please rely only on the bus itinerary on your bus ticket.\n\nThe bus could be running late or can arrive early due to some unavoidable
        circumstances like traffic, or other similar reasons that the time provided by us.</string>
    <string name="download_mobile_app">Download Mobile App</string>
    <string name="aim_of_page">Enter Short Key / PNR Number</string>
    <string name="hint_of_short_key">eg: CW5RN6</string>
    <string name="button_short_key">TRACK</string>
    <string name="hint_text">Eg: http://trkg.in/</string>
    <string name="example_text">CW5RN6</string>
    <string name="feedback">Feedback Request</string>
    <string name="feedback_close_description">Closing the screen</string>
    <string name="feedback_thanks">Thanks for choosing us for your travel, we value &amp; respect your feedback for continuous improvement</string>
    <string name="feedback_rating_description">Rate in the scale of (lowest) 1, 2, 3, 4, 5(highest) </string>
    <string name="tracking_o_dialog">TrackinGo provides information about\nthe location, arrival or delay of the bus\nto its passengers.\n\nThese services are merely for\nknowledge purposes and not for\nauthentic timings. So please rely only\non the bus itinerary on your bus ticket.\n\nThe bus could be running late or can\narrive early due to some unavoidable\ncircumstances like traffic, or other similar reasons than the time provided by us.</string>
    <string name="suggestion_feedback">Any Other Suggestions</string>
    <string name="feedback_submit">SUBMIT</string>
    <string name="please_share_your_experience_about_the_real_time_updates_sms_you_received_about_the_location_and_delay_information_of_the_bus">Please Share your experience about the real time updates/SMS you recieved about the location and delay, information of the bus</string>
    <string name="what_more_are_you_expecting_from_this_service">What more are you expecting from this service?</string>
    <string name="rating">Rating</string>
    <string name="text">Text</string>
    <string name="r1">1</string>
    <string name="r2">2</string>
    <string name="r3">3</string>
    <string name="r4">4</string>
    <string name="r5">5</string>
    <string name="how_do_you_rate_trackingo_service">How do you rate Trackingo service?</string>
    <string name="google_maps_api_key">AIzaSyCLuYsbkS20yk_eFIx1rwPLqPn2S4iF8vQ</string>
    <string name="message">message</string>
    <string name="loading">Loading...</string>
    <string name="ok">OK</string>
    <string name="share_bus_location_text">Hi, Drop off Location details has been shared with you</string>
</resources>