<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@color/blue_trackingo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingStart="16dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/aim_of_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aim_of_page"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="14dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/blue_trackingo"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/domain_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_of_short_key"
        android:singleLine="true"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/aim_of_page"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_domain_example"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/domain_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="14dp"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/example_hint_to_domain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_text"

            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/example_text_to_domain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_text"
            android:textStyle="bold"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/button_pnr_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:textSize="14sp"
        android:textAlignment="center"
        android:layout_marginTop="14dp"
        android:text="@string/button_short_key"
        android:textColor="@color/white"
        android:background="@color/blue_trackingo"
        android:elevation="16dp"
        android:clickable="true"
        android:paddingTop="10dp"
        android:focusable="true"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/linear_domain_example"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        />

</androidx.constraintlayout.widget.ConstraintLayout>