<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/rating_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/text"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:id="@+id/grid_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@+id/rating_title"
        app:layout_constraintTop_toBottomOf="@+id/rating_title"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/rating_1"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:background="@drawable/rating_square_left_border"
            android:gravity="center"
            android:text="@string/r1"
            android:textColor="@android:color/black"
            android:layout_columnWeight="1"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/grid_list"
            app:layout_constraintTop_toTopOf="@+id/grid_list"
            android:clickable="true"
            android:focusable="true"

            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/rating_2"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:background="@drawable/rating_square_box"
            android:gravity="center"
            android:text="@string/r2"
            android:layout_columnWeight="1"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/rating_1"
            app:layout_constraintTop_toTopOf="@+id/grid_list"
            android:clickable="true"
            android:focusable="true"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/rating_3"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:background="@drawable/rating_square_box"
            android:gravity="center"
            android:text="@string/r3"
            android:textColor="@android:color/black"
            android:layout_columnWeight="1"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/rating_2"
            app:layout_constraintTop_toTopOf="@+id/grid_list"
            android:clickable="true"
            android:focusable="true"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/rating_4"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:background="@drawable/rating_square_box"
            android:gravity="center"
            android:text="@string/r4"
            android:textColor="@android:color/black"
            android:layout_columnWeight="1"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/rating_3"
            app:layout_constraintTop_toTopOf="@+id/grid_list"
            android:clickable="true"
            android:focusable="true"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/rating_5"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:background="@drawable/rating_square_right_border"
            android:gravity="center"
            android:text="@string/r5"
            android:textColor="@android:color/black"
            android:layout_columnWeight="1"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/rating_4"
            app:layout_constraintTop_toTopOf="@+id/grid_list"
            android:clickable="true"
            android:focusable="true"/>

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>