<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_title_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feedback"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@color/blue_tracking_o"
            android:paddingStart="12dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingEnd="8dp"
            app:layout_constraintStart_toStartOf="@+id/constraint_title_feedback"
            app:layout_constraintTop_toTopOf="@id/constraint_title_feedback"
            app:layout_constraintBottom_toBottomOf="@id/constraint_title_feedback"
            />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/feedback_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/feedback_close"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="@+id/title_feedback"
            app:layout_constraintTop_toTopOf="@id/constraint_title_feedback"
            app:layout_constraintBottom_toBottomOf="@id/constraint_title_feedback"
            android:background="@color/blue_tracking_o"
            android:contentDescription="@string/feedback_close_description"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/feedback_thanks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/constraint_title_feedback"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/feedback_thanks"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textStyle="bold"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/feedback_rate_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/feedback_thanks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/feedback_rating_description"
        android:textAlignment="center"
        android:layout_marginTop="14dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textStyle="bold"
        android:textColor="#E82828"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_feedback_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/feedback_rate_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/suggestion_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/suggestion_feedback"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/recycle_feedback_rating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/feedback_write_suggestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittextbox_suggestion_feedback"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/suggestion_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/feedback_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedback_submit"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@color/blue_tracking_o"
        android:paddingStart="12dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>