<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_title_feedback_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_feedback_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feedback"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@color/blue_trackingo"
            android:paddingStart="12dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingEnd="8dp"
            app:layout_constraintStart_toStartOf="@+id/constraint_title_feedback_1"
            app:layout_constraintTop_toTopOf="@id/constraint_title_feedback_1"
            app:layout_constraintBottom_toBottomOf="@id/constraint_title_feedback_1"
            />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/feedback_close_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/feedback_close"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="@+id/title_feedback_1"
            app:layout_constraintTop_toTopOf="@id/constraint_title_feedback_1"
            app:layout_constraintBottom_toBottomOf="@id/constraint_title_feedback_1"
            android:background="@color/blue_trackingo"
            android:contentDescription="@string/feedback_close_description"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleview_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="4dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        tools:itemCount="5"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraint_title_feedback_1"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/feedback_experience_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_share_your_experience_about_the_real_time_updates_sms_you_received_about_the_location_and_delay_information_of_the_bus"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/recycleview_feedback"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/feedback_experience_write"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittextbox_suggestion_feedback"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        android:padding="14dp"
        app:layout_constraintTop_toBottomOf="@+id/feedback_experience_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/feedback_expect_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/what_more_are_you_expecting_from_this_service"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/feedback_experience_write"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/feedback_expect_write"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittextbox_suggestion_feedback"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@+id/feedback_expect_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/feedback_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedback_submit"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@color/blue_trackingo"
        android:paddingStart="12dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>